# kewveOs

./: .gitignore  BUILD_VERIFICATION.md  Cargo.toml  README.md  SETUP.md  aarch64-kewve_os.json  full.md  kewveOS.md  x86_64-kewve_os.json
.cargo/: config.toml
.github/workflows/: ci.yml
.kiro/specs/kewve-os-mvp/: design.md  requirements.md  tasks.md
doc/: Dependencies.md  Kewve-OS-Overview.md  REQUIREMENTS.md  designplan.md  kewve-os-figma-styles.json
kewve/pc/: index.html  styles.css
kewve/phone/: index.html
scripts/: build.bat  build.sh  setup.bat  setup.sh  validate.bat  validate.sh
src/: lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/drivers/: input.rs  keyboard.rs  mod.rs  storage.rs  timer.rs
src/interrupts/: mod.rs  pic.rs
src/platform/: mod.rs  x86_64.rs
src/process/: mod.rs
