[package]
name = "kewve-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
x86_64 = "0.14.13"
uart_16550 = "0.2.19"
volatile = "0.2.6"
spin = "0.9.8"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"

# Enterprise-grade error handling
thiserror-no-std = "2.0"

# Cross-platform support
cfg-if = "1.0"

# Logging and debugging
log = { version = "0.4", default-features = false }

# Serialization for IPC
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Cryptography for security
sha2 = { version = "0.10", default-features = false }

# Time management
time = { version = "0.3", default-features = false, features = ["macros"] }

[package.metadata.bootimage]
build-command = ["build"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"